k8s/apps/prod/rook-ceph/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ceph.prod.opryga.com`) && PathPrefix(`/`) && !ClientIP(`10.96.0.0/12`)
      kind: Rule
      # middlewares:
      #   # - name: default-headers
      #   # - name: local-ip-list
      #   - name: oauth-forward-auth
      #   - name: oauth-headers
      priority: 2
      services:
        - name: rook-ceph-mgr
          port: 8555
  tls:
    secretName: prod-opryga-com-tls # give it the ole tls cert
