k8s/apps/prod/rook-ceph/object-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-s3-ingress
  namespace: rook-ceph
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.auth.opryga.com`) && PathPrefix(`/authentik-media-78db7dad-f63a-47aa-bf49-cfe303eecbe5`)
      kind: Rule
      services:
        - name: rook-ceph-rgw-ceph-objectstore
          port: 80
  tls:
    secretName: auth-oplabs-us-tls # give it the ole tls cert
